--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="header" color="black">
+<mat-toolbar class="header">
 <span>
     <img src="assets/img/livro.png" alt="">
 </span>
