--- a/src/app/components/views/categoria/categoria-read/categoria-read.component.css
+++ b/src/app/components/views/categoria/categoria-read/categoria-read.component.css
@@ -1,9 +1,9 @@
-.content{
+.content {
     width: 90%;
     margin: 1.4rem auto auto auto;
 }
 
-.title{
+.title {
     text-align: center;
     margin-bottom: 3rem;
 }
@@ -14,6 +14,29 @@
     font-weight: 500;
 }
 
-.table{
+button {
+    margin-bottom: .8rem;
+}
+
+.table {
     width: 100%;
 }
+
+.livros {
+    color:rgb(25, 99, 160);
+    margin-left: .6rem;
+}
+
+.edit {
+    color: rgb(230, 255, 5);
+}
+
+.delete {
+    color: rgb(173, 50, 50);
+    margin-left: .5rem;
+}
+
+.mat-header {
+    width: 5rem;
+}
+
