--- a/src/app/components/views/categoria/categoria-read/categoria-read.component.html
+++ b/src/app/components/views/categoria/categoria-read/categoria-read.component.html
@@ -45,8 +45,8 @@
             <i class="material-icons">edit</i>
           </a>
           
-            <a class="delete" href="#">
-            <i class="material-icons">delete</i>
+          <a class="delete" routerLink="delete/{{ row.id }}">
+             <i id="delete" class="material-icons">delete</i>
           </a>
 
           </td>
