--- a/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -1,60 +1,47 @@
 <div class="content">
+  
+  <div class="title">
+    <h1>LIVROS</h1>
+  </div>
 
-    <div class="title">
-        <h1>LIVROS</h1>
-    </div>
+  <button class="mat-elevation-z8" (click)="navegarParaCriarLivro()" mat-stroked-button color="accent"> NOVO LIVRO </button>
 
-    <button class="mat-elevation-z8" (click)="navegarParaCriarLivro()" mat-stroked-button color="accent">NOVO LIVRO</button>
-    
-    <div class="mat-elevation-z8 content-table">
-    <table class="table" mat-table [dataSource]="livros">
-      
-        <!-- Id Column -->
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef> ID </th>
-          <td mat-cell *matCellDef="let row"> {{ row.id }} </td>
-        </ng-container>
-      
-        <!-- Nome Column -->
-        <ng-container matColumnDef="titulo">
-          <th mat-header-cell *matHeaderCellDef> TÍTULO </th>
-          <td mat-cell *matCellDef="let row"> {{ row.titulo }} </td>
-        </ng-container>
-      
-       
-        <!-- Livros Column -->
-        <ng-container matColumnDef="livros">
-          <th mat-header-cell *matHeaderCellDef> LER LIVRO </th>
-          <td mat-cell *matCellDef="let row">
-            <a class="livros" >
-          <i  class="material-icons">book</i>
-        </a>
+  <div class="mat-elevation-z8 content-table">
+    <table class="table" mat-table [dataSource]="livros" >
+
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let row">{{ row.id }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="titulo">
+        <th mat-header-cell *matHeaderCellDef>TITULO</th>
+        <td mat-cell *matCellDef="let row">{{ row.titulo }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="livros">
+        <th mat-header-cell *matHeaderCellDef>LER LIVRO</th>
+        <td mat-cell *matCellDef="let row">
+          <a class="livros" >
+            <i class="material-icons">book</i>
+          </a>
         </td>
-        </ng-container>
-      
-        <!-- Ações Column -->
-        <ng-container matColumnDef="acoes">
-          <th class="mat-header" mat-header-cell *matHeaderCellDef> AÇÕES </th>
-          <td mat-cell *matCellDef="let row"> 
-            <a class="edit" href="#">
+      </ng-container>
+
+      <ng-container matColumnDef="acoes">
+        <th class="mat-header" mat-header-cell *matHeaderCellDef>AÇÕES</th>
+        <td mat-cell *matCellDef="let row">
+          <a class="edit" routerLink="{{ row.id }}/update">
             <i class="material-icons">edit</i>
           </a>
-          
-          <a class="delete" href="#">
-             <i id="delete" class="material-icons">delete</i>
+          <a class="delete" >
+            <i class="material-icons">delete</i>
           </a>
+        </td>
+      </ng-container>
 
-          </td>
-        </ng-container>
-      
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    </div>
-
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
 </div>
-    
-
-    
-
-
