--- a/src/app/components/views/livro/livro-update/livro-update.component.html
+++ b/src/app/components/views/livro/livro-update/livro-update.component.html
@@ -1,5 +1,5 @@
 <form>
-    <h1 class="mat-elevation-z8">CRIANDO UM NOVO LIVRO</h1>
+    <h1 class="mat-elevation-z8">ATUALIZANDO LIVRO</h1>
 
     <mat-form-field class="form">
         <mat-label>Título</mat-label>
@@ -20,7 +20,7 @@
     </mat-form-field>
 
     <div class="buttons">
-        <button (click)="create()" [disabled]="getMessage()" class="mat-elevation-z8" mat-stroked-button color="accent">CRIAR</button>
+        <button (click)="update()"  [disabled]="getMessage()" class="mat-elevation-z8" mat-stroked-button color="accent">ATUALIZAR</button>
         <button (click)="cancel()" class="mat-elevation-z8" mat-stroked-button color="warn">CANCELAR</button>
     </div>
 </form>
